refactor: improve project setup and documentation
- Update README with simplified installation instructions using npx
- Pin dependency versions in package.json for better stability
- Streamline .gitignore with more organized sections
- Remove build-template.sh script (no longer needed)
- Add .env.example for better developer onboarding
- Include next-env.d.ts and pnpm-lock.yaml for improved project setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,22 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# Dependencies
+node_modules/
 
-# testing
-/coverage
+# Next.js build output
+.next/
 
-# next.js
-/.next/
-/out/
+# Local env files
+.env
+.env.local
+.env.*.local
 
-# production
-/build
+# Distribution folder
+dist/
 
-# misc
+# MacOS files
 .DS_Store
-*.pem
 
-# debug
+# Logs
 npm-debug.log*
+pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts 
-
-# pnpm
-pnpm-lock.yaml
-   .pnpm-store/
